--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,5 +43,4 @@ jobs:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
         HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       run: |
-          git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git
-          git push heroku HEAD:master -f
+        git push heroku main
