--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -60,4 +60,5 @@ jobs:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
         HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       run: |
+        git pull heroku
         git push heroku main
